--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 /********** Template CSS **********/
+
 :root {
     --primary: #06A3DA;
     --secondary: #34AD54;
@@ -8,6 +9,7 @@
 
 
 /*** Spinner ***/
+
 .spinner {
     width: 40px;
     height: 40px;
@@ -59,6 +61,7 @@
 
 
 /*** Heading ***/
+
 h1,
 h2,
 .fw-bold {
@@ -79,6 +82,7 @@ h6,
 
 
 /*** Button ***/
+
 .btn {
     font-family: 'Nunito', sans-serif;
     font-weight: 600;
@@ -124,6 +128,7 @@ h6,
 
 
 /*** Navbar ***/
+
 .navbar-dark .navbar-nav .nav-link {
     font-family: 'Nunito', sans-serif;
     position: relative;
@@ -160,14 +165,12 @@ h6,
         position: relative;
         background: #FFFFFF;
     }
-
     .navbar-dark .navbar-nav .nav-link,
     .navbar-dark .navbar-nav .nav-link.show,
     .sticky-top.navbar-dark .navbar-nav .nav-link {
         padding: 10px 0;
         color: var(--dark);
     }
-
     .navbar-dark .navbar-brand h1 {
         color: var(--primary);
     }
@@ -182,12 +185,10 @@ h6,
         border-bottom: 1px solid rgba(256, 256, 256, .1);
         z-index: 999;
     }
-    
     .sticky-top.navbar-dark {
         position: fixed;
         background: #FFFFFF;
     }
-
     .navbar-dark .navbar-nav .nav-link::before {
         position: absolute;
         content: "";
@@ -198,17 +199,14 @@ h6,
         background: var(--primary);
         transition: .5s;
     }
-
     .navbar-dark .navbar-nav .nav-link:hover::before,
     .navbar-dark .navbar-nav .nav-link.active::before {
         width: 100%;
         left: 0;
     }
-
     .navbar-dark .navbar-nav .nav-link.nav-contact::before {
         display: none;
     }
-
     .sticky-top.navbar-dark .navbar-brand h1 {
         color: var(--primary);
     }
@@ -216,6 +214,7 @@ h6,
 
 
 /*** Carousel ***/
+
 .carousel-caption {
     top: 0;
     left: 0;
@@ -230,7 +229,6 @@ h6,
         font-size: 14px;
         font-weight: 500 !important;
     }
-
     .carousel-caption h1 {
         font-size: 30px;
         font-weight: 600 !important;
@@ -250,6 +248,7 @@ h6,
 
 
 /*** Section Title ***/
+
 .section-title::before {
     position: absolute;
     content: "";
@@ -298,19 +297,47 @@ h6,
 }
 
 @-webkit-keyframes section-title-run {
-    0% {left: 0; } 50% { left : 145px; } 100% { left: 0; }
+    0% {
+        left: 0;
+    }
+    50% {
+        left: 145px;
+    }
+    100% {
+        left: 0;
+    }
 }
 
 @-webkit-keyframes section-title-run-center {
-    0% { left: 50%; margin-left: -75px; } 50% { left : 50%; margin-left: 45px; } 100% { left: 50%; margin-left: -75px; }
+    0% {
+        left: 50%;
+        margin-left: -75px;
+    }
+    50% {
+        left: 50%;
+        margin-left: 45px;
+    }
+    100% {
+        left: 50%;
+        margin-left: -75px;
+    }
 }
 
 @-webkit-keyframes section-title-run-sm {
-    0% {left: 0; } 50% { left : 85px; } 100% { left: 0; }
+    0% {
+        left: 0;
+    }
+    50% {
+        left: 85px;
+    }
+    100% {
+        left: 0;
+    }
 }
 
 
 /*** Service ***/
+
 .service-item {
     position: relative;
     height: 300px;
@@ -350,6 +377,7 @@ h6,
 
 
 /*** Testimonial ***/
+
 .testimonial-carousel .owl-dots {
     margin-top: 15px;
     display: flex;
@@ -389,6 +417,7 @@ h6,
 
 
 /*** Team ***/
+
 .team-item {
     transition: .5s;
 }
@@ -445,7 +474,7 @@ h6,
 }
 
 .team-item .team-img img,
-.blog-item .blog-img img  {
+.blog-item .blog-img img {
     transition: .5s;
 }
 
@@ -456,6 +485,7 @@ h6,
 
 
 /*** Miscellaneous ***/
+
 @media (min-width: 991.98px) {
     .facts {
         position: relative;
@@ -489,4 +519,19 @@ h6,
     .footer-about {
         margin-bottom: -75px;
     }
+}
+
+.about-header {
+    background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7)), url(../img/enterprise5.jpg) center center no-repeat !important;
+    background-size: cover;
+}
+
+.services-header {
+    background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7)), url(../img/services.jpg) center center no-repeat !important;
+    background-size: cover;
+}
+
+.enterprise-header {
+    background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7)), url(../img/enterprise3.jpg) center center no-repeat !important;
+    background-size: cover;
 }
